--- a/src/main/java/mini/ui/ChangeUserJPanel.form
+++ b/src/main/java/mini/ui/ChangeUserJPanel.form
@@ -49,7 +49,7 @@
                       <EmptySpace min="-2" pref="163" max="-2" attributes="0"/>
                   </Group>
               </Group>
-              <Component id="jLabel7" min="-2" max="-2" attributes="0"/>
+              <Component id="lblphoto" min="-2" max="-2" attributes="0"/>
               <EmptySpace min="-2" pref="89" max="-2" attributes="0"/>
           </Group>
       </Group>
@@ -59,7 +59,7 @@
           <Group type="102" alignment="0" attributes="0">
               <EmptySpace min="-2" pref="41" max="-2" attributes="0"/>
               <Group type="103" groupAlignment="1" attributes="0">
-                  <Component id="jLabel7" min="-2" max="-2" attributes="0"/>
+                  <Component id="lblphoto" min="-2" max="-2" attributes="0"/>
                   <Group type="102" attributes="0">
                       <Group type="103" groupAlignment="3" attributes="0">
                           <Component id="jLabel2" alignment="3" min="-2" max="-2" attributes="0"/>
@@ -144,10 +144,10 @@
         <Property name="text" type="java.lang.String" value="Position"/>
       </Properties>
     </Component>
-    <Component class="javax.swing.JLabel" name="jLabel7">
+    <Component class="javax.swing.JLabel" name="lblphoto">
       <Properties>
         <Property name="icon" type="javax.swing.Icon" editor="org.netbeans.modules.form.editors2.IconEditor">
-          <Image iconType="3" name="/image/8382754.png"/>
+          <Image iconType="3" name="/image/multiple-users-silhouette.png"/>
         </Property>
       </Properties>
     </Component>
